[project]
name = "manager-for-userbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles==24.1.0",
  "aiogram-i18n==1.4",
  "aiogram==3.17.0",
  "aiohappyeyeballs==2.4.4",
  "aiohttp==3.11.11",
  "aiomysql==0.2.0",
  "aiosignal==1.3.2",
  "aiosqlite==0.21.0",
  "alembic==1.14.1",
  "annotated-types==0.7.0",
  "asyncpg==0.30.0",
  "attrs==24.3.0",
  "babel==2.16.0",
  "certifi==2024.12.14",
  "click==8.1.8",
  "colorama==0.4.6 ; sys_platform == 'win32'",
  "fluent-runtime==0.4.0",
  "fluent-syntax==0.19.0",
  "frozenlist==1.5.0",
  "greenlet==3.1.1",
  "greenlet==3.1.1 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
  "hiredis==3.1.0",
  "idna==3.10",
  "levenshtein==0.27.1",
  "magic-filter==1.0.12",
  "mako==1.3.8",
  "markupsafe==3.0.2",
  "msgpack>=1.1.1",
  "msgspec==0.19.0",
  "multidict==6.1.0",
  "propcache==0.2.1",
  "psutil>=7.0.0",
  "pyaes==1.6.1",
  "pyasn1==0.6.1",
  "pydantic-core==2.27.2",
  "pydantic-settings==2.7.1",
  "pydantic==2.10.5",
  "pymysql==1.1.1",
  "python-dotenv==1.0.1",
  "pytz==2024.2",
  "rapidfuzz==3.13.0",
  "redis[asyncio]==5.2.1",
  "rsa==4.9.1",
  "sqlalchemy==2.0.37",
  "telethon==1.40.0",
  "typing-extensions==4.12.2",
  "typing-inspection==0.4.1",
  "tzdata==2024.2",
  "uvloop==0.21.0",
  "uvloop==0.21.0 ; sys_platform == 'darwin' or sys_platform == 'linux'",
  "yarl==1.18.3",
]

[tool.pyright]
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
